Add currencylayer.com Support
Issue - https://github.com/Bisileesh/Currency-Exchange/issues/1

--- a/FixerExchange/Web.config
+++ b/FixerExchange/Web.config
@@ -12,7 +12,8 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-FixerExchange-20180129032338.mdf;Initial Catalog=aspnet-FixerExchange-20180129032338;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-     <add key="FIXER" value="https://api.fixer.io/"/>
+    <add key="FIXER" value="https://api.fixer.io/"/>
+    <add key="CURRENCYLAYER" value="http://apilayer.net/"/>
   </appSettings>
   <system.web>
     <authentication mode="None" />
