Add currencyconverterapi.com Support
Issue - https://github.com/Bisileesh/Currency-Exchange/issues/2

--- a/FixerExchange/Web.config
+++ b/FixerExchange/Web.config
@@ -14,6 +14,7 @@
   <appSettings>
     <add key="FIXER" value="https://api.fixer.io/"/>
     <add key="CURRENCYLAYER" value="http://apilayer.net/"/>
+    <add key="CURRENCYCONVERTERAPI" value="https://free.currencyconverterapi.com/" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
