--- a/FixerExchange/bin/FixerExchange.dll.config
+++ b/FixerExchange/bin/FixerExchange.dll.config
@@ -14,6 +14,7 @@
   <appSettings>
     <add key="FIXER" value="https://api.fixer.io/"/>
     <add key="CURRENCYLAYER" value="http://apilayer.net/"/>
+    <add key="CURRENCYCONVERTERAPI" value="https://free.currencyconverterapi.com/" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
