Configured Start Page

--- a/FixerExchange/Web.config
+++ b/FixerExchange/Web.config
@@ -25,6 +25,11 @@
     </httpModules>
   </system.web>
   <system.webServer>
+    <defaultDocument>
+      <files>
+        <add value="index.html"/>
+      </files>
+    </defaultDocument>
     <modules>
       <remove name="FormsAuthentication" />
       <remove name="ApplicationInsightsWebTracking" />
